--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -10,7 +10,7 @@
 \usepackage[usenames,dvipsnames]{color}
 \usepackage{soul,xcolor}
 \usepackage{algorithm}
-\usepackage{algorithmic}
+\usepackage[noend]{algorithmic}
 \usepackage{amsmath}
 \usepackage[normalem]{ulem}
 
@@ -142,16 +142,18 @@
 \section{Introdução}
 Problemas nos quais o agente deve tomar uma série de decisões sequenciais podem ser resolvidos através de técnicas de Aprendizado por Reforço \cite{rlsutton,rlczaba}, em que o agente recebe um reforço numérico indicando a qualidade de cada ação tomada. Esse processo de aprendizado ocorre por tentativa e erro, no qual o agente alterna entre a \emph{aplicação} do conhecimento adquirido até o momento para selecionar a melhor ação e a \emph{exploração} do ambiente, onde o agente experimenta novas ações, aumentando o seu conhecimento sobre o ambiente e o problema. Apesar do sucesso apresentado na aplicação de técnicas AR a problemas reais \cite{tesauro1995tdgammon,barto1996elevator,scardua2002optimal,da2006inverse,abbeel2007helicopter}, elas podem apresentar indesejada lentidão na obtenção das soluções \cite{barto2003hrl}.
  
-Uma forma de mitigar essa lentidão é explorar características da \emph{representação} do problema original que permitam a aplicação de técnicas de otimização. Um exemplo disso é a utilização de options \cite{option1999}, que permitem que um problema de AR originalmente com representação monolítica seja representado de forma modular. Na nova representação, são determinados sub-problemas componentes do problema original, permitindo o aprendizado simultâneo da solução para o problema original e seus sub-problemas. Quando o problema original possui uma estrutura \emph{hierárquica}, é comum o agente ter de resolver mais de uma vez o mesmo sub-problema em momentos diferentes. Nesses casos, a utilização de options apresenta a vantagem de acelerar o aprendizado por eliminar a necessidade de se aprender a solução para o mesmo sub-problema mais de uma vez, permitindo o reuso do conhecimento já adquirido na forma de options \cite{option1999}.
+Uma forma de mitigar essa lentidão é explorar características da \emph{representação} do problema original que permitam a aplicação de técnicas de otimização. Um exemplo disso é a utilização de options \cite{option1999}, que permitem que um problema de AR originalmente com representação monolítica seja representado de forma modular. Na nova representação, são determinados sub-problemas componentes do problema original, permitindo o aprendizado simultâneo da solução para o problema original e seus sub-problemas. Quando o problema original possui uma estrutura \emph{hierárquica}, é comum o agente ter de resolver mais de uma vez o mesmo sub-problema em momentos diferentes. Nesses casos, a utilização de options apresenta a vantagem de acelerar o aprendizado por eliminar a necessidade de se aprender a solução para o mesmo sub-problema mais de uma vez, permitindo o reuso do conhecimento já adquirido na forma de options \cite{option1999} e dessa forma acelerando o aprendizado.
 
 Entretanto, para que as options possam ser utilizadas, há a necessidade da definição de elementos cuja identificação pode não ser imediata à apreciação do problema, podendo causar sobrecarga em tempo de projeto. Para contornar esse revés, são estudadas técnicas de descoberta automática de options \cite{stolle2002learning,bakker2004hierarchical,mcgovern2001automatic,imrl2004}, em que a definição das mesmas fica a cargo de um algoritmo responsável por identificar sub-problemas e criar options para resolvê-los. Das diversas técnicas empregadas, pode ser destacada a utilização de \emph{motivação intrínseca} em AR \cite{imrl2004}, em que o agente recebe recompensas adicionais através de um mecanismo interno associado a variações de características do ambiente que lhe despertam \emph{marcado interesse}. Nessas técnicas, o agente é codificado de forma a associar sub-problemas a variações significativas de atributos selecionados na descrição fatorada do estado, reduzindo o trabalho de definição das options à determinação dos atributos relevantes para a identificação dos sub-problemas.
 
 Essa técnica foi aplicada com sucesso na solução de um problema com forte estrutura hierárquica \cite{imrl2004}, através da proposta de um algoritmo que utiliza em conjunto múltiplas técnicas de AR. Apesar da aprensentação detalhada do papel da motivação intrínseca no aprendizado, não há uma investigação mais aprofundada dos diversos componentes de aprendizado envolvidos algoritmo, notadamente a estratégia de aplicação das options aprendidas. Neste trabalho, investigamos essa questão, apresentando algumas propostas de estratégias para a aplicação das options aprendidas juntamente com a avaliação experimental de cada uma delas e uma breve discussão teórica.
 
-% \section{Fundamentos Teóricos}
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+\section{Fundamentos Teóricos}
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
 
-% \section{Algoritmo}\label{sec:algoritmo}
+\section{Algoritmo}\label{sec:algoritmo}
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+
 % No Algoritmo \ref{alg:modificado} encontram-se marcadas as modificações propostas em relação ao algoritmo original \cite{imrl2004}. O intuito é o de contribuir à proposta original soluções de eventuais ambiguidades ou aparentes inconsistências, dessa forma apresentando um algoritmo que, mantendo o espírito original da utilização de Motivação Instrínseca no Aprendizado por Reforço, acrescenta alternativas de implementação buscando obter melhorias de desempenho no aprendizado. Abaixo são descritas as motivações e respectivas motivações teóricas e/ou de cunho prático.
 
 % Nas linhas \ref{alg:mod:ind:model}, \ref{alg:mod:ind:ql} e \ref{alg:mod:ind:qo}, os índices de $r^e_t$ e $r^i_t$ foram modificados para $r^e_{t+1}$ e $r^i_{t+1}$, respectivamente. Isso foi feito para permitir que as atualizações que utilizam esses valores considerassem a transição $s_t,\ a_t \leftarrow s_{t+1}$ ao invés da precedente a esta, como era anteriormente. Ainda de acordo com essa modificação, a obtenção de $r^e_{t+1}$, que anteriormente era realizada após a linha \ref{alg:mod:re2:localantigo}, passa a ser realizada logo após a transição de estados (linha \ref{alg:mod:re2}).
@@ -164,137 +166,139 @@ Essa técnica foi aplicada com sucesso na solução de um problema com forte estrut
 
 % Na proposta original, a atualização de $Q_B$ para options (planejamento SMDP, linha \ref{alg:mod:qbo}) considerava para esse cálculo quaiquer estados $s_t$ que o agente viesse a visitar. Para evitar problemas de incosistência entre a função-valor e o conjunto iniciador de uma option $o$, foi adicionado um teste que somente atualiza $Q_B(s_t,\ o)$ para uma dada option $o$ se $s_t \in I^o$. Dessa forma, evita-se que seja atribuído um valor positivo à execução de uma option $o$ em um estado em que a option não possa ser executada. Uma outra vantagem decorrente dessa modificação é a possível economia de recursos computacionais, já que algumas atualizações desnecessárias são potencialmente evitadas.
 
-% \begin{algorithm}
-% \caption{Algoritmo X}
-% \label{alg:modificado}
-% \algsetup{indent=2em}
-% \small
-% \begin{algorithmic}[1]
-%     \newcommand{\sd}{s_{t+1}}
-%     \newcommand{\bo}[1]{$\beta^o(#1)$}
-%     \newcommand{\ubo}[1]{$1\ -\ $\bo{#1}}
-%     \newcommand{\tv}{\tr{valor terminal para a option $o$}}
-%     \newcommand{\maxao}[1]{$\max_{a \in A \cup O}{#1}$}
-%     \newcommand{\maos}{\maxao{Q^o(\sd,\ a)}}
-%     \newcommand{\maox}{\maxao{Q^o(x,\ a)}}
-%     \newcommand{\aalpha}{$\xleftarrow{\alpha}$}
-%     \newcommand{\termoA}{\bo{\sd}$v$}
-%     \newcommand{\termoB}{[\ubo{\sd}][\maos]}
-%     \newcommand{\termoC}{\bo{x}$v$}
-%     \newcommand{\termoD}{$[$\ubo{x}$][$\maox$]$}
-%     \newcommand{\transita}[1]{$#1_t \leftarrow #1_{t+1}$}
+\begin{algorithm}
+\caption{Algoritmo X}
+\label{alg:modificado}
+\algsetup{indent=2em}
+\small
+\begin{algorithmic}[1]
+    \newcommand{\sd}{s_{t+1}}
+    \newcommand{\bo}[1]{$\beta^o(#1)$}
+    \newcommand{\ubo}[1]{$1\ -\ $\bo{#1}}
+    \newcommand{\tv}{\tr{valor terminal para a option $o$}}
+    \newcommand{\maxao}[1]{$\max_{a \in A \cup O}{#1}$}
+    \newcommand{\maos}{\maxao{Q^o(\sd,\ a)}}
+    \newcommand{\maox}{\maxao{Q^o(x,\ a)}}
+    \newcommand{\aalpha}{$\xleftarrow{\alpha}$}
+    \newcommand{\termoA}{\bo{\sd}$v$}
+    \newcommand{\termoB}{[\ubo{\sd}][\maos]}
+    \newcommand{\termoC}{\bo{x}$v$}
+    \newcommand{\termoD}{$[$\ubo{x}$][$\maox$]$}
+    \newcommand{\transita}[1]{$#1_t \leftarrow #1_{t+1}$}
 
-%     \REQUIRE{Inicializar $s_t,\ a_t,\ $\grifar{$o_t$}$,\ r^e_t,\ r^i_t$}
+    \REQUIRE{Inicializar $s_t,\ a_t,\ $\grifar{$o_t$}$,\ r^e_t,\ r^i_t$}
 
-%     \REPEAT
+    \REPEAT
 
-%     \STATE Obter próximo estado $\sd$
+    \STATE Obter próximo estado $\sd$
 
-%     \STATE \label{alg:mod:re2} \grifar{$r^e_{t+1} \leftarrow$ recompensa extrínsica recebida na transição $s_t,\ a_t \rightarrow s_{t+1}$}
+    \STATE \label{alg:mod:re2} \grifar{$r^e_{t+1} \leftarrow$ recompensa extrínsica recebida na transição $s_t,\ a_t \rightarrow s_{t+1}$}
 
-%     \GIMMESPACE
+    \GIMMESPACE
 
-%     \STATE\COMMENT{Trata ocorrência de evento saliente}
+    \STATE\COMMENT{Trata ocorrência de evento saliente}
 
-%     \STATE \label{alg:mod:oe:ini}\grifar{$o_e \leftarrow nil$}
+    \STATE \label{alg:mod:oe:ini}\grifar{$o_e \leftarrow nil$}
 
-%     \IF{ocorreu um evento saliente $e$}
+    \IF{ocorreu um evento saliente $e$}
 
-%         \IF{option para $e$, $o_e$, não existe em $O$}\label{alg:mod:oe:priocorr}
+        \IF{option para $e$, $o_e$, não existe em $O$}\label{alg:mod:oe:priocorr}
 
-%             \STATE \label{alg:mod:oe:atr}\grifar{$o_e \leftarrow $[option para $e$]}
+            \STATE \label{alg:mod:oe:atr}\grifar{$o_e \leftarrow $[option para $e$]}
 
-%             \STATE Criar $o_e$ em $O$
+            \STATE Criar $o_e$ em $O$
 
-%             \STATE Adicionar $s_t$ a $I^{o_e}$
+            \STATE Adicionar $s_t$ a $I^{o_e}$
 
-%             \STATE $\beta^{o_e}(s_{t+1}) \leftarrow 1$
+            \STATE $\beta^{o_e}(s_{t+1}) \leftarrow 1$
 
-%         \ENDIF
+        \ENDIF
 
-%         \STATE $r^i_{t+1} \leftarrow \tau[1-P(s_{t+1}|s_t)]$ \COMMENT{$\tau$ constante}
+        \STATE $r^i_{t+1} \leftarrow \tau[1-P(s_{t+1}|s_t)]$ \COMMENT{$\tau$ constante}
 
-%     \ELSE
+    \ELSE
 
-%         \STATE $r^i_{t+1} \leftarrow 0$
+        \STATE $r^i_{t+1} \leftarrow 0$
 
-%     \ENDIF
+    \ENDIF
 
-%     \GIMMESPACE
+    \GIMMESPACE
 
-%     \STATE\COMMENT{Atualiza o modelo das options}
+    \STATE\COMMENT{Atualiza o modelo das options}
 
-%     \FOR{cada option $o \neq $\grifar{$o_e$} em $O$} \label{alg:mod:oe:if}
+    \FOR{cada option $o \neq $\grifar{$o_e$} em $O$} \label{alg:mod:oe:if}
 
-%         \IF{$s_{t+1} \in I^o$ \AND \grifar{$\beta^o(s_t) \neq 1$}} \label{alg:mod:addI}
+        \IF{$s_{t+1} \in I^o$ \AND \grifar{$\beta^o(s_t) \neq 1$}} \label{alg:mod:addI}
 
-%             \STATE Adicionar $s_t$ a $I^o$
+            \STATE Adicionar $s_t$ a $I^o$
 
-%         \ENDIF
+        \ENDIF
 
-%         \IF{\grifar{$a_t$ é a ação gulosa para $o$ no estado $s_t$}} \label{alg:mod:atgulosa}
+        \IF{\grifar{$a_t$ é a ação gulosa para $o$ no estado $s_t$}} \label{alg:mod:atgulosa}
 
-%             \STATE\COMMENT{Atualiza o modelo probabilístico de transição da option}
+            \STATE\COMMENT{Atualiza o modelo probabilístico de transição da option}
 
-%             \STATE $P(x|s_t) \xleftarrow{\alpha} [\gamma(1 - \beta^o(s_{t+1}))P^o(x|s_{t+1}) + \gamma\beta^o(s_{t+1})\delta_{s_{t+1}x}]$
+            \STATE $P(x|s_t) \xleftarrow{\alpha} [\gamma(1 - \beta^o(s_{t+1}))P^o(x|s_{t+1}) + \gamma\beta^o(s_{t+1})\delta_{s_{t+1}x}]$
 
-%             \STATE\COMMENT{Atualiza modelo de recompensa da option} \STATE $R^o(s_t) \xleftarrow{\alpha} [$\grifar{$r^e_{t+1}$}$ + \gamma(1 - \beta^o(s_{t+1}))R^o(s_{t+1})]$ \label{alg:mod:ind:model}
+            \STATE\COMMENT{Atualiza modelo de recompensa da option} \STATE $R^o(s_t) \xleftarrow{\alpha} [$\grifar{$r^e_{t+1}$}$ + \gamma(1 - \beta^o(s_{t+1}))R^o(s_{t+1})]$ \label{alg:mod:ind:model}
 
-%         \ENDIF
+        \ENDIF
 
-%     \ENDFOR
+    \ENDFOR
 
-%     \GIMMESPACE
+    \GIMMESPACE
 
-%     \STATE\COMMENT{Atualização da \tr{função valor estado-ação} do Q-Learning}
+    \STATE\COMMENT{Atualização da \tr{função valor estado-ação} do Q-Learning}
 
-%     \STATE $Q_B(s_t,\ a_t) \xleftarrow{\alpha} $\grifar{$r^e_{t+1}$}$ + $\grifar{$r^i_{t+1}$}$ + \gamma\max_{a \in A \cup O}{Q_B(s_{t+1},\ a)}$ \label{alg:mod:ind:ql}
+    \STATE $Q_B(s_t,\ a_t) \xleftarrow{\alpha} $\grifar{$r^e_{t+1}$}$ + $\grifar{$r^i_{t+1}$}$ + \gamma\max_{a \in A \cup O}{Q_B(s_{t+1},\ a)}$ \label{alg:mod:ind:ql}
 
-%     \GIMMESPACE
+    \GIMMESPACE
 
-%     \STATE\COMMENT{Atualização da \tr{função valor estado-ação} para planejamento SMDP}
+    \STATE\COMMENT{Atualização da \tr{função valor estado-ação} para planejamento SMDP}
 
-%     \FOR{cada option $o$ em $O$}
+    \FOR{cada option $o$ em $O$}
 
-%         \IF{\grifar{$s_t \in I^o$}}
+        \IF{\grifar{$s_t \in I^o$}}
 
-%         \STATE $Q_B(s_t,\ o) \xleftarrow{\alpha} R^o(s_t) + \sum_{x \in S}{P^o(x|s_t)\max_{a \in A \cup O}Q_B(x,\ a)}$ \label{alg:mod:qbo}
+        \STATE $Q_B(s_t,\ o) \xleftarrow{\alpha} R^o(s_t) + \sum_{x \in S}{P^o(x|s_t)\max_{a \in A \cup O}Q_B(x,\ a)}$ \label{alg:mod:qbo}
 
-%         \ENDIF
+        \ENDIF
 
-%     \ENDFOR
+    \ENDFOR
 
-%     \GIMMESPACE
+    \GIMMESPACE
 
-%     \STATE\COMMENT{Atualização das \tr{funções valor estado-ação} para as options}
+    \STATE\COMMENT{Atualização das \tr{funções valor estado-ação} para as options}
 
-%     \FOR{cada option $o$ em $O$ tal que $s_t \in I^o$}
+    \FOR{cada option $o$ em $O$ tal que $s_t \in I^o$}
 
-%         \STATE $v \leftarrow$ \tv
+        \STATE $v \leftarrow$ \tv
 
-%         \STATE $Q^o(s_t,\ a_t)$\aalpha$\ $\grifar{$r^e_{t+1}$}$\ +\ \gamma\{$\termoA$\ +\ $\termoB$\}$ \label{alg:mod:ind:qo}
+        \STATE $Q^o(s_t,\ a_t)$\aalpha$\ $\grifar{$r^e_{t+1}$}$\ +\ \gamma\{$\termoA$\ +\ $\termoB$\}$ \label{alg:mod:ind:qo}
 
-%         \FOR{cada option $o'$ em $O$ tal que $s_t \in I^{o'}$ e $o \neq o'$}
+        \FOR{cada option $o'$ em $O$ tal que $s_t \in I^{o'}$ e $o \neq o'$}
 
-%             \STATE $Q^o(s_t,\ o')$\aalpha $R^{o'}(s_t)\ + \sum_{x \in S}{P^{o'}(x|s_t)}\{$\termoC$\ +\ $\termoD$\}$
+            \STATE $Q^o(s_t,\ o')$\aalpha $R^{o'}(s_t)\ + \sum_{x \in S}{P^{o'}(x|s_t)}\{$\termoC$\ +\ $\termoD$\}$
 
-%         \ENDFOR
+        \ENDFOR
 
-%     \ENDFOR \label{alg:mod:re2:localantigo}
+    \ENDFOR \label{alg:mod:re2:localantigo}
 
-%     \STATE Escolher $a_{t+1}$ através de estratégia \tr{$\epsilon$-gulosa} com respeito a $Q_B$
+    \STATE Escolher $a_{t+1}$ através de estratégia \tr{$\epsilon$-gulosa} com respeito a $Q_B$
 
-%     \STATE \transita{s}; \transita{a}; \transita{r^e}; \transita{r^i}
+    \STATE \transita{s}; \transita{a}; \transita{r^e}; \transita{r^i}
 
-%     \UNTIL{condição de parada}
+    \UNTIL{condição de parada}
 
-% \end{algorithmic}
-% \end{algorithm}
+\end{algorithmic}
+\end{algorithm}
 	
-% \section{Experimentos}
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+\section{Experimentos}
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
 
-% \section{Resultados e Discussão}
+\section{Resultados e Discussão}
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+
 % % Checar localização desse parágrafo (seria um de arcabouço teórico?)
 % % Espera-se como resultado da aplicação da utilização de Motivação Intrínseca em Aprendizado por Reforço um aceleramento do processo de aprendizado através da exploração da estrutura hierárquica do problema. Esse aproveitamento pode ser feito em três etapas: (i) identificação de sub-problemas e (ii) aprendizado e refinamento da solução dos sub-problemas (iii) composição da solução para a tarefa inicial utilizando as soluções dos sub-problemas.
 
@@ -340,8 +344,8 @@ Essa técnica foi aplicada com sucesso na solução de um problema com forte estrut
 % %     \label{fig:dummy}
 % % \end{figure}
 
-% \section{Conclusão}
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+\section{Conclusão}
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
 
 % \begin{received}
 % \end{received}
